# quicksilver

./: CMakeLists.txt  README.md
include/: BlockingQueue.h  Edge.h  EdgeIndex.h  IndexLookUp.h  IndexPath.h  IndexPathGraph.h  KleeneStar.h  MergeJoin.h  Path.h  PathStatistic.h  PhysicalOperator.h  PhysicalPlan.h  SimpleEstimator.h  SimpleGraph.h  SmartGraph.cpp  SmartGraph.h
include/student/: AdjGraph.cpp  AdjGraph.h  BlockingQueue.h  Edge.h  HashJoin.h  HelperPhysicalOperator.h  IndexJoin.cpp  IndexJoin.h  IndexLookUp.h  IndexLookUp2.h  KleeneStar.h  MergeJoin.h  PhysicalOperator.h  Planner.h  Subtree.h  Synopse.h
src/: Edge.cpp  EdgeIndex.cpp  IndexLookUp.cpp  IndexPath.cpp  IndexPathGraph.cpp  KleeneStar.cpp  MergeJoin.cpp  Path.cpp  PathStatistic.cpp  PathTree.cpp  PhysicalPlan.cpp  SimpleEstimator.cpp  SimpleEvaluator.cpp  SimpleGraph.cpp  benches.cpp  main.cpp  myMain.cpp
src/student/: HashJoin.cpp  HelperPhysicalOperator.cpp  IndexJoin.cpp  IndexLookUp.cpp  IndexLookUp2.cpp  KleeneStar.cpp  MergeJoin.cpp  Planner.cpp  myMain.cpp
testfiles/: graphSimple.nt  queries copie.csv  queries.csv
testfiles/workload/real/1/: queries.csv
testfiles/workload/real/2/: queries_test.csv
toy/: graph.nt  queries.csv
workload/real/2/: queries.csv
